# brick-mcp-server

./: .gitignore  dvc.yaml  flake.nix  pyproject.toml
app/: mcp_helpers.py  mcp_server.py
stages/: 01_list.sh  02_install.sh  03_extract.py  03_resolve.sh  04_embed.py  04_extract_hdt.sh  04_ragify.py  label.rq
stages/deprecated/: embed.py  extract.py
stages/deprecated/hdt/: 04_extract_hdt.sh  pred.rq  type.rq
