[project]
name = "readme-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biobricks>=0.3.9",
    "google-genai>=1.31.0",
    "ipython>=9.4.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "rdflib-hdt>=3.1",
    "tqdm>=4.67.1",
]
