[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biobricks>=0.3.9",
    "chainlit>=2.7.2",
    "chromadb>=1.0.20",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "google-genai>=1.32.0",
    "httpx>=0.28.1",
    "ipython>=9.4.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "rdflib-hdt>=3.1",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
]
